pre final update

--- a/carp.html
+++ b/carp.html
@@ -21,7 +21,7 @@
             <h1 class="bigBold">Lynn's Posters</h1>
         </a>
         <ul>
-            <div class="contents-area-carp">
+            <div class="contents-area-carp push">
                 <a class="menu" href="home.html" target="blank">
                     <li>Home</li>
                 </a>
@@ -53,6 +53,7 @@
 <main>
     <div class="welcome">
         <img src="CARP POSTER 1.jpg" class="typo-imgs">
+        <section class="sec-top"></section>
         <div class="main-box-typo"></div>
         <p class="typo-para">For this poster I wanted to try and keep a certain level of minimalism. For this reason I tried to keep a Monocromatic colourscheme with the addition of some Red accents which I think really pulls the design together. Overall I foud this poster fun to make but it took me a moment to get the ball rolling. 
         <p>
@@ -67,6 +68,7 @@
 <main>
     <div class="welcome">
         <img src="CARP POSTER 2.jpg" class="typo-imgs">
+        <section class="sec-top"></section>
         <div class="main-box-typo"></div>
         <p class="typo-para">For this poster I took heavy inspiration from the pieces of De Stijl artist Piet Mondian. I have enjoyed his pieces and Theo van Doesburg's since the beginning of A levels and because of this they have become some of my favourite Modernists. 
         <p>
@@ -81,6 +83,7 @@
 <main>
     <div class="welcome">
         <img src="CARP POSTER 3.jpg" class="typo-imgs">
+        <section class="sec-top"></section>
         <div class="main-box-typo"></div>
         <p class="typo-para">Finally, for my third poster I wanted try and capture an old feel. I took inspiration from early hot air balloons. I chose to used again a quite Monocromatic colourscheme and again used a red as an accent. 
         <p>
@@ -99,6 +102,9 @@
         <div class="social-media footer-containter">
             <a href="https://www.instagram.com/tomefan2002/" target="_blank">
                 <li class="social-media">Instagram</li>
+            </a>
+            <a href="https://open.spotify.com/user/qhbkzqphspihd56j9t3dojs7a?si=7af88a4cee624532" target="_blank">
+                <li class="social-media">Spotify</li>
             </a>
             <a href="https://www.snapchat.com/add/tome_fan?share_id=6-IMnslf5pc&locale=en-GB" target="_blank">
                 <li class="social-media">Snapchat</li>
