--- a/coding.html
+++ b/coding.html
@@ -21,7 +21,7 @@
             <h1 class="bigBold">Lynn's Coding</h1>
         </a>
         <ul>
-            <div class="contents-area-coding">
+            <div class="contents-area-coding push">
                 <a class="menu" href="home.html" target="blank">
                     <li>Home</li>
                 </a>
@@ -51,8 +51,9 @@
 </section>
 
 <main>
-    <div class="welcome">
-        <img src="First Coding assignment.png" class="typo-imgs">
+    <div class="welcome-code">
+        <img src="First Coding assignment.png" class="carp-imgs">
+        <section></section>
         <div class="main-box-typo"></div>
         <p class="typo-para">Welcome to Website of lynn
         <p>
@@ -65,8 +66,9 @@
 </section>
 
 <main>
-    <div class="welcome">
-        <img src="Second Coding Assignment.png" class="typo-imgs">
+    <div class="welcome-code">
+        <img src="Second Coding Assignment.png" class="carp-imgs">
+        <section></section>
         <div class="main-box-typo"></div>
         <p class="typo-para">Welcome to Website of lynn
         <p>
@@ -79,8 +81,9 @@
 </section>
 
 <main>
-    <div class="welcome">
-        <img src="Second Coding Assignment2.png" class="typo-imgs">
+    <div class="welcome-code">
+        <img src="Second Coding Assignment2.png" class="carp-imgs">
+        <section></section>
         <div class="main-box-typo"></div>
         <p class="typo-para">Welcome to Website of lynn
         <p>
@@ -93,8 +96,9 @@
 </section>
 
 <main>
-    <div class="welcome">
-        <img src="Second Coding Assignment3.png" class="typo-imgs">
+    <div class="welcome-code">
+        <img src="Second Coding Assignment3.png" class="carp-imgs">
+        <section></section>
         <div class="main-box-typo"></div>
         <p class="typo-para">Welcome to Website of lynn
         <p>
@@ -107,8 +111,9 @@
 </section>
 
 <main>
-    <div class="welcome">
-        <img src="Second Coding Assignment4.png" class="typo-imgs">
+    <div class="welcome-code">
+        <img src="Second Coding Assignment4.png" class="carp-imgs">
+        <section></section>
         <div class="main-box-typo"></div>
         <p class="typo-para">Welcome to Website of lynn
         <p>
@@ -121,8 +126,9 @@
 </section>
 
 <main>
-    <div class="welcome">
-        <img src="Second Coding Assignment5.png" class="typo-imgs">
+    <div class="welcome-code">
+        <img src="Second Coding Assignment5.png" class="carp-imgs">
+        <section></section>
         <div class="main-box-typo"></div>
         <p class="typo-para">Welcome to Website of lynn
         <p>
@@ -135,8 +141,9 @@
 </section>
 
 <main>
-    <div class="welcome">
-        <img src="Third Coding Assignment.png" class="typo-imgs">
+    <div class="welcome-code">
+        <img src="Third Coding Assignment.png" class="carp-imgs">
+        <section></section>
         <div class="main-box-typo"></div>
         <p class="typo-para">Welcome to Website of lynn
         <p>
@@ -149,8 +156,9 @@
 </section>
 
 <main>
-    <div class="welcome">
-        <img src="Third Coding Assignment2.png" class="typo-imgs">
+    <div class="welcome-code">
+        <img src="Third Coding Assignment2.png" class="carp-imgs">
+        <section></section>
         <div class="main-box-typo"></div>
         <p class="typo-para">Welcome to Website of lynn
         <p>
@@ -163,8 +171,9 @@
 </section>
 
 <main>
-    <div class="welcome">
-        <img src="Third Coding Assignment3.png" class="typo-imgs">
+    <div class="welcome-code">
+        <img src="Third Coding Assignment3.png" class="carp-imgs">
+        <section></section>
         <div class="main-box-typo"></div>
         <p class="typo-para">Welcome to Website of lynn
         <p>
@@ -177,8 +186,9 @@
 </section>
 
 <main>
-    <div class="welcome">
-        <img src="Third Coding Assignment4.png" class="typo-imgs">
+    <div class="welcome-code">
+        <img src="Third Coding Assignment4.png" class="carp-imgs">
+        <section></section>
         <div class="main-box-typo"></div>
         <p class="typo-para">Welcome to Website of lynn
         <p>
@@ -191,8 +201,9 @@
 </section>
 
 <main>
-    <div class="welcome">
-        <img src="Third Coding Assignment5 (secondpage).png" class="typo-imgs">
+    <div class="welcome-code">
+        <img src="Third Coding Assignment5 (secondpage).png" class="carp-imgs">
+        <section></section>
         <div class="main-box-typo"></div>
         <p class="typo-para">Welcome to Website of lynn
         <p>
@@ -205,8 +216,9 @@
 </section>
 
 <main>
-    <div class="welcome">
-        <img src="Third Coding Assignment6 (thirdpage).png" class="typo-imgs">
+    <div class="welcome-code">
+        <img src="Third Coding Assignment6 (thirdpage).png" class="carp-imgs">
+        <section></section>
         <div class="main-box-typo"></div>
         <p class="typo-para">Welcome to Website of lynn
         <p>
@@ -219,8 +231,9 @@
 </section> 
 
 <main>
-    <div class="welcome">
-        <img src="Carousel Slider.png" class="typo-imgs">
+    <div class="welcome-code">
+        <img src="Carousel Slider.png" class="carp-imgs">
+        <section></section>
         <div class="main-box-typo"></div>
         <p class="typo-para">Welcome to Website of lynn
         <p>
@@ -239,6 +252,9 @@
         <div class="social-media footer-containter">
             <a href="https://www.instagram.com/tomefan2002/" target="_blank">
                 <li class="social-media">Instagram</li>
+            </a>
+            <a href="https://open.spotify.com/user/qhbkzqphspihd56j9t3dojs7a?si=7af88a4cee624532" target="_blank">
+                <li class="social-media">Spotify</li>
             </a>
             <a href="https://www.snapchat.com/add/tome_fan?share_id=6-IMnslf5pc&locale=en-GB" target="_blank">
                 <li class="social-media">Snapchat</li>
