--- a/reflection.html
+++ b/reflection.html
@@ -21,7 +21,7 @@
         <h1 class="bigBold">Lynn's Reflection</h1>
         </a>
         <ul>
-            <div class="contents-area-reflection">
+            <div class="contents-area-reflection push">
                 <a class="menu" href="home.html" target="blank">
                     <li>Home</li>
                 </a>
@@ -53,6 +53,7 @@
 <main>
     <div class="welcome">
         <img class="home-img" src="https://placekitten.com/600/600">
+        <section class="sec-top"></section>
         <div class="main-box-reflection"></div>
         <div class="about-me-area">
             <p class="about-me">Reflection</p>
@@ -74,6 +75,9 @@
         <div class="social-media footer-containter">
             <a href="https://www.instagram.com/tomefan2002/" target="_blank">
                 <li class="social-media">Instagram</li>
+            </a>
+            <a href="https://open.spotify.com/user/qhbkzqphspihd56j9t3dojs7a?si=7af88a4cee624532" target="_blank">
+                <li class="social-media">Spotify</li>
             </a>
             <a href="https://www.snapchat.com/add/tome_fan?share_id=6-IMnslf5pc&locale=en-GB" target="_blank">
                 <li class="social-media">Snapchat</li>
