--- a/home.html
+++ b/home.html
@@ -21,7 +21,7 @@
         <h1 class="bigBold">Lynn's Portfolio</h1>
         </a>
         <ul>
-            <div class="contents-area">
+            <div class="contents-area push">
                 <a class="menu" href="home.html" target="blank">
                     <li>Home</li>
                 </a>
@@ -52,11 +52,12 @@
 
 <main>
     <div class="welcome">
-        <img class="home-img" src="https://placekitten.com/1000/600">
+        <img class="home-img" src="https://placekitten.com/600/600">
+        <section class="sec-top"></section>
         <div class="main-box-home"></div>
         <div class="about-me-area">
             <p class="about-me">About Me</p>
-            <p class="main-para-home">Hi, My name is Thomas Lynn, the creator of this website. I am currently a Student at UWE studying Digital Media. I grew up in South Wales my entire life and moved to Bristol at 18 to begin my University career.</p>
+            <p class="main-para-home">Hi, My name is Thomas Lynn, the creator of this website. I am currently a Student at UWE studying Digital Media. I grew up in South Wales my entire life and moved to Bristol at 18 to begin my University career. I'm really into music and exploring new genres and artists, I love finding good design - my favourite movement is probably Modernism artists </p>
         </div>
     </div>
 </main>
@@ -72,6 +73,9 @@
         <div class="social-media footer-containter">
             <a href="https://www.instagram.com/tomefan2002/" target="_blank">
                 <li class="social-media">Instagram</li>
+            </a>
+            <a href="https://open.spotify.com/user/qhbkzqphspihd56j9t3dojs7a?si=7af88a4cee624532" target="_blank">
+                <li class="social-media">Spotify</li>
             </a>
             <a href="https://www.snapchat.com/add/tome_fan?share_id=6-IMnslf5pc&locale=en-GB" target="_blank">
                 <li class="social-media">Snapchat</li>
