--- a/carp.html
+++ b/carp.html
@@ -17,32 +17,36 @@
 
 <body>
     <header>
-        <a href="home.html" target="_blank">
-            <h1 class="bigBold">Lynn's Posters</h1>
-        </a>
-        <ul>
-            <div class="contents-area-carp push">
-                <a class="menu" href="home.html" target="blank">
-                    <li>Home</li>
-                </a>
-                <div class="content-gap1"></div>
-                <a class="menu" href="typography.html" target="blank">
-                    <li>Typography</button></li>
-                </a>
-                <div class="content-gap2"></div>
-                <a class="menu" href="carp.html" target="blank">
-                    <li>CARP</li>
-                </a>
-                <div class="content-gap1"></div>
-                <a class="menu" href="coding.html" target="blank">
-                    <li>Coding</li>
-                </a>
-                <div class="content-gap1"></div>
-                <a class="menu" href="Reflection.html" target="blank">
-                    <li>Reflection</li>
-                </a>
+        <div>
+            <a href="home.html" target="_blank">
+                <h1 class="bigBold">Lynn's Posters</h1>
+            </a>
+        </div>
+            <div class="push">
+                <ul>
+                    <div class="contents-area-carp push">
+                        <a class="menu" href="home.html" target="blank">
+                            <li>Home</li>
+                        </a>
+                        <div class="content-gap1"></div>
+                        <a class="menu" href="typography.html" target="blank">
+                            <li>Typography</button></li>
+                        </a>
+                        <div class="content-gap2"></div>
+                        <a class="menu" href="carp.html" target="blank">
+                            <li>CARP</li>
+                        </a>
+                        <div class="content-gap1"></div>
+                        <a class="menu" href="coding.html" target="blank">
+                            <li>Coding</li>
+                        </a>
+                        <div class="content-gap1"></div>
+                        <a class="menu" href="Reflection.html" target="blank">
+                            <li>Reflection</li>
+                        </a>
+                    </div>
+                </ul>
             </div>
-        </ul>
     </header>
 </body>
 
@@ -82,7 +86,7 @@
 
 <main>
     <div class="welcome">
-        <img src="CARP POSTER 3.jpg" class="typo-imgs">
+        <img src="CARP POSTER 3.png" class="typo-imgs">
         <section class="sec-top"></section>
         <div class="main-box-typo"></div>
         <p class="typo-para">Finally, for my third poster I wanted try and capture an old feel. I took inspiration from early hot air balloons. I chose to used again a quite Monocromatic colourscheme and again used a red as an accent. 
