--- a/home.html
+++ b/home.html
@@ -17,32 +17,36 @@
 
 <body>
     <header>
-        <a href="home.html" target="_blank">
-        <h1 class="bigBold">Lynn's Portfolio</h1>
-        </a>
-            <ul>
-                <div class="contents-area push">
-                    <a class="menu" href="home.html" target="blank">
-                        <li>Home</li>
-                    </a>
-                    <div class="content-gap1"></div>
-                    <a class="menu" href="typography.html" target="blank">
-                        <li>Typography</button></li>
-                    </a>
-                    <div class="content-gap2"></div>
-                    <a class="menu" href="carp.html" target="blank">
-                        <li>CARP</li>
-                    </a>
-                    <div class="content-gap1"></div>
-                    <a class="menu" href="coding.html" target="blank">
-                        <li>Coding</li>
-                    </a>
-                    <div class="content-gap1"></div>
-                    <a class="menu" href="Reflection.html" target="blank">
-                        <li>Reflection</li>
-                    </a>
-                </div>
-            </ul>
+        <div>
+            <a href="home.html" target="_blank">
+            <h1 class="bigBold">Lynn's Portfolio</h1>
+            </a>
+        </div>
+            <div class="push">
+                <ul>
+                    <div class="contents-area push">
+                        <a class="menu" href="home.html" target="blank">
+                            <li>Home</li>
+                        </a>
+                        <div class="content-gap1"></div>
+                        <a class="menu" href="typography.html" target="blank">
+                            <li>Typography</button></li>
+                        </a>
+                        <div class="content-gap2"></div>
+                        <a class="menu" href="carp.html" target="blank">
+                            <li>CARP</li>
+                        </a>
+                        <div class="content-gap1"></div>
+                        <a class="menu" href="coding.html" target="blank">
+                            <li>Coding</li>
+                        </a>
+                        <div class="content-gap1"></div>
+                        <a class="menu" href="Reflection.html" target="blank">
+                            <li>Reflection</li>
+                        </a>
+                    </div>
+                </ul>
+            </div>
     </header>
 </body>
 
@@ -57,7 +61,7 @@
         <div class="main-box-home"></div>
         <div class="about-me-area">
             <p class="about-me">About Me</p>
-            <p class="main-para-home">Hi, My name is Thomas Lynn, the creator of this website. I am currently a Student at UWE studying Digital Media. I grew up in South Wales my entire life and moved to Bristol at 18 to begin my University career. I'm really into music and exploring new genres and artists, I love finding good design - my favourite movement is probably Modernism artists </p>
+            <p class="main-para-home">Hi, My name is Thomas Lynn, the creator of this website. I am currently a Student at UWE studying Digital Media. I grew up in South Wales my entire life and moved to Bristol at 18 to begin my University career. I'm really into music and exploring new genres and artists (check the spotify), I love finding good design - my favourite movement is probably Modernism, artists Piet Mondrian and Theo Van Doesberg are my current favourites.</p>
         </div>
     </div>
 </main>
