--- a/typography.html
+++ b/typography.html
@@ -17,34 +17,36 @@
 
 <body>
     <header>
-        <div class="header-container">
+        <div>
             <a href="home.html" target="_blank">
                 <h1 class="bigBold">Lynn's Typography</h1>
             </a>
-            <ul class="header-nav">
-                <div class="contents-area-typo push">
-                    <a class="menu" href="home.html" target="blank">
-                        <li>Home</li>
-                    </a>
-                    <div class="content-gap1"></div>
-                    <a class="menu" href="typography.html" target="blank">
-                        <li>Typography</button></li>
-                    </a>
-                    <div class="content-gap2"></div>
-                    <a class="menu" href="carp.html" target="blank">
-                        <li>CARP</li>
-                    </a>
-                    <div class="content-gap1"></div>
-                    <a class="menu" href="coding.html" target="blank">
-                        <li>Coding</li>
-                    </a>
-                    <div class="content-gap1"></div>
-                    <a class="menu" href="Reflection.html" target="blank">
-                        <li>Reflection</li>
-                    </a>
-                </div>
-            </ul>
         </div>
+            <div class="push">
+                <ul>
+                    <div class="contents-area-typo push">
+                        <a class="menu" href="home.html" target="blank">
+                            <li>Home</li>
+                        </a>
+                        <div class="content-gap1"></div>
+                        <a class="menu" href="typography.html" target="blank">
+                            <li>Typography</button></li>
+                        </a>
+                        <div class="content-gap2"></div>
+                        <a class="menu" href="carp.html" target="blank">
+                            <li>CARP</li>
+                        </a>
+                        <div class="content-gap1"></div>
+                        <a class="menu" href="coding.html" target="blank">
+                            <li>Coding</li>
+                        </a>
+                        <div class="content-gap1"></div>
+                        <a class="menu" href="Reflection.html" target="blank">
+                            <li>Reflection</li>
+                        </a>
+                    </div>
+                </ul>
+            </div>
     </header>
 </body>
 
