--- a/reflection.html
+++ b/reflection.html
@@ -17,32 +17,36 @@
 
 <body>
     <header>
-        <a href="home.html" target="_blank">
-        <h1 class="bigBold">Lynn's Reflection</h1>
-        </a>
-        <ul>
-            <div class="contents-area-reflection push">
-                <a class="menu" href="home.html" target="blank">
-                    <li>Home</li>
-                </a>
-                <div class="content-gap1"></div>
-                <a class="menu" href="typography.html" target="blank">
-                    <li>Typography</button></li>
-                </a>
-                <div class="content-gap2"></div>
-                <a class="menu" href="carp.html" target="blank">
-                    <li>CARP</li>
-                </a>
-                <div class="content-gap1"></div>
-                <a class="menu" href="coding.html" target="blank">
-                    <li>Coding</li>
-                </a>
-                <div class="content-gap1"></div>
-                <a class="menu" href="Reflection.html" target="blank">
-                    <li>Reflection</li>
-                </a>
+        <div>
+            <a href="home.html" target="_blank">
+            <h1 class="bigBold">Lynn's Reflection</h1>
+            </a>
+        </div>
+            <div class="push">
+                <ul>
+                    <div class="contents-area-reflection push">
+                        <a class="menu" href="home.html" target="blank">
+                            <li>Home</li>
+                        </a>
+                        <div class="content-gap1"></div>
+                        <a class="menu" href="typography.html" target="blank">
+                            <li>Typography</button></li>
+                        </a>
+                        <div class="content-gap2"></div>
+                        <a class="menu" href="carp.html" target="blank">
+                            <li>CARP</li>
+                        </a>
+                        <div class="content-gap1"></div>
+                        <a class="menu" href="coding.html" target="blank">
+                            <li>Coding</li>
+                        </a>
+                        <div class="content-gap1"></div>
+                        <a class="menu" href="Reflection.html" target="blank">
+                            <li>Reflection</li>
+                        </a>
+                    </div>
+                </ul>
             </div>
-        </ul>
     </header>
 </body>
 
