--- a/coding.html
+++ b/coding.html
@@ -18,14 +18,14 @@
 <body>
     <header>
         <div>
-            <a href="home.html" target="_blank">
+            <a href="index.html" target="_blank">
                 <h1 class="bigBold">Lynn's Coding</h1>
             </a>
         </div>
             <div class="push">
                 <ul>
                     <div class="contents-area-coding push">
-                        <a class="menu" href="home.html" target="blank">
+                        <a class="menu" href="index.html" target="blank">
                             <li>Home</li>
                         </a>
                         <div class="content-gap1"></div>
@@ -59,7 +59,7 @@
         <img src="First Coding assignment.png" class="carp-imgs">
         <section></section>
         <div class="main-box-typo"></div>
-        <p class="typo-para">Welcome to Website of lynn
+        <p class="typo-para">Humble beginnings, my first time learnng to code in HTML5. Of course, this is about as basic as a website can come just some arbitrary text on a white background. <a href="https://github.com/tomefan2002/lynnrepo1/tree/main/GWDS%20week%201" target="_blank">(https://github.com/tomefan2002/lynnrepo1/tree/main/GWDS%20week%201)</a>
         <p>
     </div>
     </div>
@@ -74,7 +74,7 @@
         <img src="Second Coding Assignment.png" class="carp-imgs">
         <section></section>
         <div class="main-box-typo"></div>
-        <p class="typo-para">Welcome to Website of lynn
+        <p class="typo-para">Moving on to the second task. This is the first time I had experimented with CSS and FlexBox. 
         <p>
     </div>
     </div>
@@ -89,7 +89,7 @@
         <img src="Second Coding Assignment2.png" class="carp-imgs">
         <section></section>
         <div class="main-box-typo"></div>
-        <p class="typo-para">Welcome to Website of lynn
+        <p class="typo-para">Continuing on with this task, I learnt the basics of alignment and justification within FlexBox. In addition to this I also learnt to create Lists, how to change background colour, how to style certain sections of text/body's/images, etc... 
         <p>
     </div>
     </div>
@@ -104,7 +104,7 @@
         <img src="Second Coding Assignment3.png" class="carp-imgs">
         <section></section>
         <div class="main-box-typo"></div>
-        <p class="typo-para">Welcome to Website of lynn
+        <p class="typo-para">Also during this task I learnt to create hyperlinks within HTML and how to style said hyperlinks with CSS. I found this task was very useful and an easy step up from the previous. It taught me to basics of creating a half-decent looking webpage. <a href="https://github.com/tomefan2002/lynnrepo2/blob/main/index.html" target="_blank">(https://github.com/tomefan2002/lynnrepo2/blob/main/index.html)</a>
         <p>
     </div>
     </div>
@@ -119,7 +119,7 @@
         <img src="Second Coding Assignment4.png" class="carp-imgs">
         <section></section>
         <div class="main-box-typo"></div>
-        <p class="typo-para">Welcome to Website of lynn
+        <p class="typo-para">Moving on, during this task I learnt to use FlexBox to further align images and paragraphs. I used margins to aid in the alignment of the images and paragraphs. 
         <p>
     </div>
     </div>
@@ -134,7 +134,7 @@
         <img src="Second Coding Assignment5.png" class="carp-imgs">
         <section></section>
         <div class="main-box-typo"></div>
-        <p class="typo-para">Welcome to Website of lynn
+        <p class="typo-para">Finally, for this task I created a basic footer that provided a short conclusion of the task. <a href="https://github.com/tomefan2002/lynnrepo2/blob/main/cake.html">(https://github.com/tomefan2002/lynnrepo2/blob/main/cake.html)</a>
         <p>
     </div>
     </div>
@@ -149,7 +149,7 @@
         <img src="Third Coding Assignment.png" class="carp-imgs">
         <section></section>
         <div class="main-box-typo"></div>
-        <p class="typo-para">Welcome to Website of lynn
+        <p class="typo-para">Advancing quickly, during this task I further learnt more about HTML & CSS. This was the first time I made use of buttons with HTML and used them to act as anchor links within the page - one of the buttons acting as a hyperlink. <a href="https://github.com/tomefan2002/lynnrepo3/blob/main/index.html" target="_blank">(https://github.com/tomefan2002/lynnrepo3/blob/main/index.html)</a>
         <p>
     </div>
     </div>
@@ -164,7 +164,7 @@
         <img src="Third Coding Assignment2.png" class="carp-imgs">
         <section></section>
         <div class="main-box-typo"></div>
-        <p class="typo-para">Welcome to Website of lynn
+        <p class="typo-para">In addition to learning how to create buttons, I also learnt to add embedded videos inside of the webpage as seen above.  
         <p>
     </div>
     </div>
@@ -179,7 +179,7 @@
         <img src="Third Coding Assignment3.png" class="carp-imgs">
         <section></section>
         <div class="main-box-typo"></div>
-        <p class="typo-para">Welcome to Website of lynn
+        <p class="typo-para">Similarly I also learnt to embed an MP3 file. 
         <p>
     </div>
     </div>
@@ -194,7 +194,7 @@
         <img src="Third Coding Assignment4.png" class="carp-imgs">
         <section></section>
         <div class="main-box-typo"></div>
-        <p class="typo-para">Welcome to Website of lynn
+        <p class="typo-para">In the above images and much through my future projects I made use of Placeholder images - these were useful to figure out how big I want my images in Px wihout any guesswork. 
         <p>
     </div>
     </div>
@@ -209,7 +209,7 @@
         <img src="Third Coding Assignment5 (secondpage).png" class="carp-imgs">
         <section></section>
         <div class="main-box-typo"></div>
-        <p class="typo-para">Welcome to Website of lynn
+        <p class="typo-para">This was some more practice for linking different webpages within the same project using hyperlinks within a button. <a href="https://github.com/tomefan2002/lynnrepo3/blob/main/button.html" target="_blank">(https://github.com/tomefan2002/lynnrepo3/blob/main/button.html)</a>
         <p>
     </div>
     </div>
@@ -224,7 +224,7 @@
         <img src="Third Coding Assignment6 (thirdpage).png" class="carp-imgs">
         <section></section>
         <div class="main-box-typo"></div>
-        <p class="typo-para">Welcome to Website of lynn
+        <p class="typo-para">This was my first time ever taking code from an external source. I learnt to take code from another website and add it to my own and how to ensure it worked by the 'Format Document' inside of VSc. 
         <p>
     </div>
     </div>
@@ -239,7 +239,7 @@
         <img src="Carousel Slider.png" class="carp-imgs">
         <section></section>
         <div class="main-box-typo"></div>
-        <p class="typo-para">Welcome to Website of lynn
+        <p class="typo-para">I added the code to create a feature that allowed for multiple images to be displayed each time you press a different number/move the slider left & right. <a href="https://github.com/tomefan2002/lynnrepo3/blob/main/slider.html" target="_blank">(https://github.com/tomefan2002/lynnrepo3/blob/main/slider.html)s</a>
         <p>
     </div>
     </div>
@@ -251,7 +251,7 @@
 
 <footer>
     <p class="footer-msg"> &hearts; This Website was brought to you by lynn &hearts;</p>
-    <a href="home.html" target="_blank"><p class="footer-home">Home</p></a>
+    <a href="index.html" target="_blank"><p class="footer-home">Home</p></a>
     <ul>
         <div class="social-media footer-containter">
             <a href="https://www.instagram.com/tomefan2002/" target="_blank">
