--- a/typography.html
+++ b/typography.html
@@ -18,14 +18,14 @@
 <body>
     <header>
         <div>
-            <a href="home.html" target="_blank">
+            <a href="index.html" target="_blank">
                 <h1 class="bigBold">Lynn's Typography</h1>
             </a>
         </div>
             <div class="push">
                 <ul>
                     <div class="contents-area-typo push">
-                        <a class="menu" href="home.html" target="blank">
+                        <a class="menu" href="index.html" target="blank">
                             <li>Home</li>
                         </a>
                         <div class="content-gap1"></div>
@@ -156,7 +156,7 @@
 
 <footer>
     <p class="footer-msg"> &hearts; This Website was brought to you by lynn &hearts;</p>
-    <a href="home.html" target="_blank"><p class="footer-home">Home</p></a>
+    <a href="index.html" target="_blank"><p class="footer-home">Home</p></a>
     <ul>
         <div class="social-media footer-containter">
             <a href="https://www.instagram.com/tomefan2002/" target="_blank">
