--- a/typography.html
+++ b/typography.html
@@ -41,7 +41,7 @@
                             <li>Coding</li>
                         </a>
                         <div class="content-gap1"></div>
-                        <a class="menu" href="Reflection.html" target="blank">
+                        <a class="menu" href="reflection.html" target="blank">
                             <li>Reflection</li>
                         </a>
                     </div>
